chore: update devDependencies

--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@lezer/highlight": "^1.2.0",
     "@replit/codemirror-indentation-markers": "^6.5.2",
-    "ajv": "^8.16.0",
+    "ajv": "^8.17.1",
     "codemirror-wrapped-line-indent": "^1.0.8",
     "diff-sequences": "^29.6.3",
     "immutable-json-patch": "6.0.1",
@@ -97,7 +97,7 @@
     "lodash-es": "^4.17.21",
     "memoize-one": "^6.0.0",
     "natural-compare-lite": "^1.4.0",
-    "sass": "^1.77.6",
+    "sass": "^1.77.8",
     "svelte-awesome": "^3.3.1",
     "svelte-select": "^5.8.3",
     "vanilla-picker": "^2.12.3"
@@ -106,8 +106,8 @@
     "svelte": "^4.0.0 || ^5.0.0"
   },
   "devDependencies": {
-    "@babel/core": "7.24.7",
-    "@babel/preset-env": "7.24.7",
+    "@babel/core": "7.24.8",
+    "@babel/preset-env": "7.24.8",
     "@commitlint/cli": "19.3.0",
     "@commitlint/config-conventional": "19.2.2",
     "@rollup/plugin-babel": "6.0.4",
@@ -125,30 +125,30 @@
     "@types/cookie": "0.6.0",
     "@types/jmespath": "0.15.2",
     "@types/lodash-es": "4.17.12",
-    "@typescript-eslint/eslint-plugin": "7.15.0",
-    "@typescript-eslint/parser": "7.15.0",
-    "@vitest/coverage-v8": "1.6.0",
+    "@typescript-eslint/eslint-plugin": "7.16.0",
+    "@typescript-eslint/parser": "7.16.0",
+    "@vitest/coverage-v8": "2.0.2",
     "cpy-cli": "5.0.0",
     "del-cli": "5.1.0",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-svelte": "2.41.0",
+    "eslint-plugin-svelte": "2.42.0",
     "husky": "9.0.11",
     "jsdom": "24.1.0",
     "lossless-json": "4.0.1",
     "npm-run-all": "4.1.5",
-    "prettier": "3.3.2",
+    "prettier": "3.3.3",
     "prettier-plugin-svelte": "3.2.5",
-    "rollup": "4.18.0",
+    "rollup": "4.18.1",
     "rollup-plugin-dts": "6.1.1",
     "rollup-plugin-svelte": "7.2.2",
     "standard-version": "9.5.0",
-    "svelte": "^5.0.0-next.175",
+    "svelte": "5.0.0-next.175",
     "svelte-check": "3.8.4",
-    "svelte-preprocess": "6.0.1",
+    "svelte-preprocess": "6.0.2",
     "typescript": "5.5.3",
     "vite": "5.3.3",
-    "vitest": "1.6.0"
+    "vitest": "2.0.2"
   }
 }
