chore: upgrade eslint configuration

--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "npm run lint:prettier && npm run lint:eslint",
     "lint:prettier": "prettier --check --plugin prettier-plugin-svelte .",
-    "lint:eslint": "eslint --cache --ignore-path .gitignore .",
+    "lint:eslint": "eslint",
     "format": "prettier --write --plugin prettier-plugin-svelte .",
     "prepare": "husky && cd tools && node generateDiffSequenceEsm.js && cd ..",
     "release": "npm-run-all release:**",
@@ -110,6 +110,8 @@
     "@babel/preset-env": "7.24.8",
     "@commitlint/cli": "19.3.0",
     "@commitlint/config-conventional": "19.2.2",
+    "@eslint/eslintrc": "3.1.0",
+    "@eslint/js": "9.7.0",
     "@rollup/plugin-babel": "6.0.4",
     "@rollup/plugin-commonjs": "26.0.1",
     "@rollup/plugin-json": "6.1.0",
@@ -134,6 +136,7 @@
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-svelte": "2.42.0",
+    "globals": "15.8.0",
     "husky": "9.0.11",
     "jsdom": "24.1.0",
     "lossless-json": "4.0.1",
@@ -146,6 +149,7 @@
     "standard-version": "9.5.0",
     "svelte": "^4.2.18",
     "svelte-check": "3.8.4",
+    "svelte-eslint-parser": "0.40.0",
     "svelte-preprocess": "6.0.2",
     "typescript": "5.5.3",
     "vite": "5.3.3",
