feat: implement jsonpath query language support via `jsonpathQueryLanguage`

--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "immutable-json-patch": "6.0.1",
     "jmespath": "^0.16.0",
     "json-source-map": "^0.6.1",
+    "jsonpath": "1.1.1",
     "jsonrepair": "^3.8.0",
     "lodash-es": "^4.17.21",
     "memoize-one": "^6.0.0",
@@ -127,6 +128,7 @@
     "@testing-library/svelte": "5.2.0",
     "@types/cookie": "0.6.0",
     "@types/jmespath": "0.15.2",
+    "@types/jsonpath": "0.2.4",
     "@types/lodash-es": "4.17.12",
     "@typescript-eslint/eslint-plugin": "7.16.0",
     "@typescript-eslint/parser": "7.16.0",
