--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "immutable-json-patch": "6.0.1",
     "jmespath": "^0.16.0",
     "json-source-map": "^0.6.1",
-    "jsonpath": "1.1.1",
+    "jsonpath-plus": "^9.0.0",
     "jsonrepair": "^3.8.0",
     "lodash-es": "^4.17.21",
     "memoize-one": "^6.0.0",
