--- a/package.json
+++ b/package.json
@@ -144,10 +144,12 @@
     "jsdom": "24.1.1",
     "lossless-json": "4.0.1",
     "npm-run-all": "4.1.5",
+    "postcss": "8.4.40",
     "prettier": "3.3.3",
     "prettier-plugin-svelte": "3.2.6",
     "rollup": "4.19.2",
     "rollup-plugin-dts": "6.1.1",
+    "rollup-plugin-postcss": "4.0.2",
     "rollup-plugin-svelte": "7.2.2",
     "standard-version": "9.5.0",
     "svelte": "5.0.0-next.205",
