--- a/package.json
+++ b/package.json
@@ -75,17 +75,17 @@
     "release-dry-run": "standard-version --dry-run"
   },
   "dependencies": {
-    "@codemirror/autocomplete": "^6.18.0",
-    "@codemirror/commands": "^6.6.0",
+    "@codemirror/autocomplete": "^6.18.1",
+    "@codemirror/commands": "^6.6.2",
     "@codemirror/lang-json": "^6.0.1",
-    "@codemirror/language": "^6.10.2",
+    "@codemirror/language": "^6.10.3",
     "@codemirror/lint": "^6.8.1",
     "@codemirror/search": "^6.5.6",
     "@codemirror/state": "^6.4.1",
     "@codemirror/view": "^6.33.0",
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
-    "@josdejong/jsonquery": "^1.2.0",
+    "@jsonquerylang/jsonquery": "^3.0.5",
     "@lezer/highlight": "^1.2.1",
     "@replit/codemirror-indentation-markers": "^6.5.3",
     "ajv": "^8.17.1",
@@ -95,12 +95,12 @@
     "jmespath": "^0.16.0",
     "json-source-map": "^0.6.1",
     "jsonpath-plus": "^9.0.0",
-    "jsonrepair": "^3.8.0",
+    "jsonrepair": "^3.8.1",
     "lodash-es": "^4.17.21",
     "memoize-one": "^6.0.0",
     "natural-compare-lite": "^1.4.0",
-    "sass": "^1.77.8",
-    "svelte-awesome": "^3.3.1",
+    "sass": "1.77.8",
+    "svelte-awesome": "^3.3.4",
     "svelte-select": "^5.8.3",
     "vanilla-picker": "^2.12.3"
   },
@@ -110,19 +110,19 @@
   "devDependencies": {
     "@babel/core": "7.25.2",
     "@babel/preset-env": "7.25.4",
-    "@commitlint/cli": "19.4.1",
-    "@commitlint/config-conventional": "19.4.1",
+    "@commitlint/cli": "19.5.0",
+    "@commitlint/config-conventional": "19.5.0",
     "@eslint/eslintrc": "3.1.0",
-    "@eslint/js": "9.9.1",
+    "@eslint/js": "9.11.0",
     "@rollup/plugin-babel": "6.0.4",
     "@rollup/plugin-commonjs": "26.0.1",
     "@rollup/plugin-json": "6.1.0",
-    "@rollup/plugin-node-resolve": "15.2.3",
+    "@rollup/plugin-node-resolve": "15.2.4",
     "@rollup/plugin-terser": "0.4.4",
-    "@rollup/plugin-typescript": "11.1.6",
-    "@sveltejs/adapter-auto": "3.2.4",
-    "@sveltejs/kit": "2.5.25",
-    "@sveltejs/package": "2.3.4",
+    "@rollup/plugin-typescript": "12.1.0",
+    "@sveltejs/adapter-auto": "3.2.5",
+    "@sveltejs/kit": "2.5.28",
+    "@sveltejs/package": "2.3.5",
     "@sveltejs/vite-plugin-svelte": "3.1.2",
     "@testing-library/jest-dom": "6.5.0",
     "@testing-library/svelte": "5.2.1",
@@ -132,30 +132,30 @@
     "@types/lodash-es": "4.17.12",
     "@typescript-eslint/eslint-plugin": "7.17.0",
     "@typescript-eslint/parser": "7.17.0",
-    "@vitest/coverage-v8": "2.0.5",
+    "@vitest/coverage-v8": "2.1.1",
     "cpy-cli": "5.0.0",
     "del-cli": "5.1.0",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-svelte": "2.43.0",
+    "eslint-plugin-import": "2.30.0",
+    "eslint-plugin-svelte": "2.44.0",
     "globals": "15.9.0",
-    "husky": "9.1.5",
-    "jsdom": "25.0.0",
-    "lossless-json": "4.0.1",
+    "husky": "9.1.6",
+    "jsdom": "25.0.1",
+    "lossless-json": "4.0.2",
     "npm-run-all": "4.1.5",
     "prettier": "3.3.3",
     "prettier-plugin-svelte": "3.2.6",
-    "rollup": "4.21.2",
+    "rollup": "4.22.4",
     "rollup-plugin-dts": "6.1.1",
     "rollup-plugin-svelte": "7.2.2",
     "standard-version": "9.5.0",
     "svelte": "^4.2.19",
-    "svelte-check": "3.8.6",
-    "svelte-eslint-parser": "0.41.0",
+    "svelte-check": "4.0.2",
+    "svelte-eslint-parser": "0.41.1",
     "svelte-preprocess": "6.0.2",
-    "typescript": "5.5.4",
-    "vite": "5.4.2",
-    "vitest": "2.0.5"
+    "typescript": "5.6.2",
+    "vite": "5.4.7",
+    "vitest": "2.1.1"
   }
 }
