--- a/package.json
+++ b/package.json
@@ -76,30 +76,30 @@
   },
   "dependencies": {
     "@codemirror/autocomplete": "^6.18.1",
-    "@codemirror/commands": "^6.6.2",
+    "@codemirror/commands": "^6.7.0",
     "@codemirror/lang-json": "^6.0.1",
     "@codemirror/language": "^6.10.3",
     "@codemirror/lint": "^6.8.2",
     "@codemirror/search": "^6.5.6",
     "@codemirror/state": "^6.4.1",
-    "@codemirror/view": "^6.33.0",
+    "@codemirror/view": "^6.34.1",
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
-    "@jsonquerylang/jsonquery": "^3.0.5",
+    "@jsonquerylang/jsonquery": "^3.1.1",
     "@lezer/highlight": "^1.2.1",
     "@replit/codemirror-indentation-markers": "^6.5.3",
     "ajv": "^8.17.1",
     "codemirror-wrapped-line-indent": "^1.0.8",
     "diff-sequences": "^29.6.3",
-    "immutable-json-patch": "6.0.1",
+    "immutable-json-patch": "^6.0.1",
     "jmespath": "^0.16.0",
     "json-source-map": "^0.6.1",
-    "jsonpath-plus": "^9.0.0",
+    "jsonpath-plus": "^9.0.0 || ^10.0.0",
     "jsonrepair": "^3.8.1",
     "lodash-es": "^4.17.21",
     "memoize-one": "^6.0.0",
     "natural-compare-lite": "^1.4.0",
-    "sass": "1.78.0",
+    "sass": "^1.79.5",
     "svelte-awesome": "^3.3.4",
     "svelte-select": "^5.8.3",
     "vanilla-picker": "^2.12.3"
@@ -108,8 +108,8 @@
     "svelte": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "7.25.2",
-    "@babel/preset-env": "7.25.4",
+    "@babel/core": "7.25.8",
+    "@babel/preset-env": "7.25.8",
     "@commitlint/cli": "19.5.0",
     "@commitlint/config-conventional": "19.5.0",
     "@eslint/eslintrc": "3.1.0",
@@ -121,41 +121,41 @@
     "@rollup/plugin-terser": "0.4.4",
     "@rollup/plugin-typescript": "12.1.0",
     "@sveltejs/adapter-auto": "3.2.5",
-    "@sveltejs/kit": "2.5.28",
+    "@sveltejs/kit": "2.7.0",
     "@sveltejs/package": "2.3.5",
     "@sveltejs/vite-plugin-svelte": "3.1.2",
     "@testing-library/jest-dom": "6.5.0",
-    "@testing-library/svelte": "5.2.1",
+    "@testing-library/svelte": "5.2.3",
     "@types/cookie": "0.6.0",
     "@types/jmespath": "0.15.2",
     "@types/jsonpath": "0.2.4",
     "@types/lodash-es": "4.17.12",
     "@typescript-eslint/eslint-plugin": "7.17.0",
     "@typescript-eslint/parser": "7.17.0",
-    "@vitest/coverage-v8": "2.1.1",
+    "@vitest/coverage-v8": "2.1.2",
     "cpy-cli": "5.0.0",
-    "del-cli": "5.1.0",
+    "del-cli": "6.0.0",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.30.0",
     "eslint-plugin-svelte": "2.44.0",
-    "globals": "15.9.0",
+    "globals": "15.11.0",
     "husky": "9.1.6",
     "jsdom": "25.0.1",
     "lossless-json": "4.0.2",
     "npm-run-all": "4.1.5",
     "prettier": "3.3.3",
-    "prettier-plugin-svelte": "3.2.6",
-    "rollup": "4.22.4",
+    "prettier-plugin-svelte": "3.2.7",
+    "rollup": "4.24.0",
     "rollup-plugin-dts": "6.1.1",
     "rollup-plugin-svelte": "7.2.2",
     "standard-version": "9.5.0",
     "svelte": "^4.2.19",
-    "svelte-check": "4.0.2",
+    "svelte-check": "4.0.5",
     "svelte-eslint-parser": "0.41.1",
-    "svelte-preprocess": "6.0.2",
-    "typescript": "5.6.2",
-    "vite": "5.4.7",
-    "vitest": "2.1.1"
+    "svelte-preprocess": "6.0.3",
+    "typescript": "5.6.3",
+    "vite": "5.4.8",
+    "vitest": "2.1.2"
   }
 }
