--- a/package.json
+++ b/package.json
@@ -123,7 +123,7 @@
     "@sveltejs/adapter-auto": "3.2.5",
     "@sveltejs/kit": "2.7.0",
     "@sveltejs/package": "2.3.5",
-    "@sveltejs/vite-plugin-svelte": "3.1.2",
+    "@sveltejs/vite-plugin-svelte": "4.0.0-next.8",
     "@testing-library/jest-dom": "6.5.0",
     "@testing-library/svelte": "5.2.3",
     "@types/cookie": "0.6.0",
@@ -150,7 +150,7 @@
     "rollup-plugin-dts": "6.1.1",
     "rollup-plugin-svelte": "7.2.2",
     "standard-version": "9.5.0",
-    "svelte": "^4.2.19",
+    "svelte": "5.0.0-next.264",
     "svelte-check": "4.0.5",
     "svelte-eslint-parser": "0.41.1",
     "svelte-preprocess": "6.0.3",
