--- a/package.json
+++ b/package.json
@@ -99,13 +99,13 @@
     "lodash-es": "^4.17.21",
     "memoize-one": "^6.0.0",
     "natural-compare-lite": "^1.4.0",
-    "sass": "^1.79.5",
-    "svelte-awesome": "^3.3.4",
+    "sass": "1.79.5",
+    "svelte-awesome": "3.3.3",
     "svelte-select": "^5.8.3",
     "vanilla-picker": "^2.12.3"
   },
   "peerDependencies": {
-    "svelte": "^4.0.0 || ^5.0.0-next.0 || ^5.0.0"
+    "svelte": "^4.0.0 || ^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.25.8",
@@ -151,7 +151,7 @@
     "rollup-plugin-postcss": "4.0.2",
     "rollup-plugin-svelte": "7.2.2",
     "standard-version": "9.5.0",
-    "svelte": "5.0.0-next.264",
+    "svelte": "5.0.4",
     "svelte-check": "4.0.5",
     "svelte-eslint-parser": "0.41.1",
     "svelte-preprocess": "6.0.3",
