--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
   },
   "dependencies": {
     "@codemirror/autocomplete": "^6.18.1",
-    "@codemirror/commands": "^6.7.0",
+    "@codemirror/commands": "^6.7.1",
     "@codemirror/lang-json": "^6.0.1",
     "@codemirror/language": "^6.10.3",
     "@codemirror/lint": "^6.8.2",
@@ -94,12 +94,12 @@
     "immutable-json-patch": "^6.0.1",
     "jmespath": "^0.16.0",
     "json-source-map": "^0.6.1",
-    "jsonpath-plus": "^9.0.0 || ^10.0.0",
-    "jsonrepair": "^3.8.1",
+    "jsonpath-plus": "^9.0.0 || ^10.1.0",
+    "jsonrepair": "3.8.0",
     "lodash-es": "^4.17.21",
     "memoize-one": "^6.0.0",
     "natural-compare-lite": "^1.4.0",
-    "sass": "^1.79.5",
+    "sass": "^1.80.3",
     "svelte-awesome": "^3.3.4",
     "svelte-select": "^5.8.3",
     "vanilla-picker": "^2.12.3"
@@ -113,32 +113,32 @@
     "@commitlint/cli": "19.5.0",
     "@commitlint/config-conventional": "19.5.0",
     "@eslint/eslintrc": "3.1.0",
-    "@eslint/js": "9.11.1",
+    "@eslint/js": "9.13.0",
     "@rollup/plugin-babel": "6.0.4",
-    "@rollup/plugin-commonjs": "28.0.0",
+    "@rollup/plugin-commonjs": "28.0.1",
     "@rollup/plugin-json": "6.1.0",
     "@rollup/plugin-node-resolve": "15.3.0",
     "@rollup/plugin-terser": "0.4.4",
-    "@rollup/plugin-typescript": "12.1.0",
+    "@rollup/plugin-typescript": "12.1.1",
     "@sveltejs/adapter-auto": "3.2.5",
-    "@sveltejs/kit": "2.7.0",
+    "@sveltejs/kit": "2.7.2",
     "@sveltejs/package": "2.3.5",
     "@sveltejs/vite-plugin-svelte": "3.1.2",
-    "@testing-library/jest-dom": "6.5.0",
-    "@testing-library/svelte": "5.2.3",
+    "@testing-library/jest-dom": "6.6.2",
+    "@testing-library/svelte": "5.2.4",
     "@types/cookie": "0.6.0",
     "@types/jmespath": "0.15.2",
     "@types/jsonpath": "0.2.4",
     "@types/lodash-es": "4.17.12",
     "@typescript-eslint/eslint-plugin": "7.17.0",
     "@typescript-eslint/parser": "7.17.0",
-    "@vitest/coverage-v8": "2.1.2",
+    "@vitest/coverage-v8": "2.1.3",
     "cpy-cli": "5.0.0",
     "del-cli": "6.0.0",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-import": "2.30.0",
-    "eslint-plugin-svelte": "2.44.0",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-svelte": "2.46.0",
     "globals": "15.11.0",
     "husky": "9.1.6",
     "jsdom": "25.0.1",
@@ -152,10 +152,10 @@
     "standard-version": "9.5.0",
     "svelte": "^4.2.19",
     "svelte-check": "4.0.5",
-    "svelte-eslint-parser": "0.41.1",
+    "svelte-eslint-parser": "0.43.0",
     "svelte-preprocess": "6.0.3",
     "typescript": "5.6.3",
-    "vite": "5.4.8",
-    "vitest": "2.1.2"
+    "vite": "5.4.9",
+    "vitest": "2.1.3"
   }
 }
