--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "@babel/preset-env": "7.25.8",
     "@commitlint/cli": "19.5.0",
     "@commitlint/config-conventional": "19.5.0",
+    "@eslint/compat": "1.2.1",
     "@eslint/eslintrc": "3.1.0",
     "@eslint/js": "9.13.0",
     "@rollup/plugin-babel": "6.0.4",
@@ -130,12 +131,12 @@
     "@types/jmespath": "0.15.2",
     "@types/jsonpath": "0.2.4",
     "@types/lodash-es": "4.17.12",
-    "@typescript-eslint/eslint-plugin": "7.17.0",
-    "@typescript-eslint/parser": "7.17.0",
+    "@typescript-eslint/eslint-plugin": "8.11.0",
+    "@typescript-eslint/parser": "8.11.0",
     "@vitest/coverage-v8": "2.1.3",
     "cpy-cli": "5.0.0",
     "del-cli": "6.0.0",
-    "eslint": "8.57.0",
+    "eslint": "9.13.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-svelte": "2.46.0",
