--- a/package.json
+++ b/package.json
@@ -124,7 +124,7 @@
     "@sveltejs/adapter-auto": "3.2.5",
     "@sveltejs/kit": "2.7.2",
     "@sveltejs/package": "2.3.5",
-    "@sveltejs/vite-plugin-svelte": "4.0.0-next.8",
+    "@sveltejs/vite-plugin-svelte": "4.0.0",
     "@testing-library/jest-dom": "6.6.2",
     "@testing-library/svelte": "5.2.4",
     "@types/cookie": "0.6.0",
@@ -152,7 +152,7 @@
     "rollup-plugin-postcss": "4.0.2",
     "rollup-plugin-svelte": "7.2.2",
     "standard-version": "9.5.0",
-    "svelte": "5.0.4",
+    "svelte": "5.0.5",
     "svelte-check": "4.0.5",
     "svelte-eslint-parser": "0.43.0",
     "svelte-preprocess": "6.0.3",
