chore: update to the latest version of `svelte-awesome`, and use inexact versions again

--- a/package.json
+++ b/package.json
@@ -99,8 +99,8 @@
     "lodash-es": "^4.17.21",
     "memoize-one": "^6.0.0",
     "natural-compare-lite": "^1.4.0",
-    "sass": "1.80.3",
-    "svelte-awesome": "3.3.3",
+    "sass": "^1.80.3",
+    "svelte-awesome": "^3.3.5",
     "svelte-select": "^5.8.3",
     "vanilla-picker": "^2.12.3"
   },
