--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "@codemirror/view": "^6.34.1",
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
-    "@jsonquerylang/jsonquery": "^3.1.1",
+    "@jsonquerylang/jsonquery": "^3.1.1 || ^4.0.0",
     "@lezer/highlight": "^1.2.1",
     "@replit/codemirror-indentation-markers": "^6.5.3",
     "ajv": "^8.17.1",
@@ -94,7 +94,7 @@
     "immutable-json-patch": "^6.0.1",
     "jmespath": "^0.16.0",
     "json-source-map": "^0.6.1",
-    "jsonpath-plus": "^9.0.0 || ^10.1.0",
+    "jsonpath-plus": "^9.0.0 || ^10.2.0",
     "jsonrepair": "^3.0.0",
     "lodash-es": "^4.17.21",
     "memoize-one": "^6.0.0",
@@ -110,11 +110,11 @@
   "devDependencies": {
     "@babel/core": "7.26.0",
     "@babel/preset-env": "7.26.0",
-    "@commitlint/cli": "19.5.0",
-    "@commitlint/config-conventional": "19.5.0",
-    "@eslint/compat": "1.2.2",
-    "@eslint/eslintrc": "3.1.0",
-    "@eslint/js": "9.14.0",
+    "@commitlint/cli": "19.6.0",
+    "@commitlint/config-conventional": "19.6.0",
+    "@eslint/compat": "1.2.3",
+    "@eslint/eslintrc": "3.2.0",
+    "@eslint/js": "9.15.0",
     "@rollup/plugin-babel": "6.0.4",
     "@rollup/plugin-commonjs": "28.0.1",
     "@rollup/plugin-json": "6.1.0",
@@ -122,41 +122,41 @@
     "@rollup/plugin-terser": "0.4.4",
     "@rollup/plugin-typescript": "12.1.1",
     "@sveltejs/adapter-auto": "3.3.1",
-    "@sveltejs/kit": "2.7.5",
+    "@sveltejs/kit": "2.8.1",
     "@sveltejs/package": "2.3.7",
-    "@sveltejs/vite-plugin-svelte": "4.0.0",
+    "@sveltejs/vite-plugin-svelte": "4.0.1",
     "@testing-library/jest-dom": "6.6.3",
-    "@testing-library/svelte": "5.2.4",
+    "@testing-library/svelte": "5.2.6",
     "@types/jmespath": "0.15.2",
     "@types/jsonpath": "0.2.4",
     "@types/lodash-es": "4.17.12",
-    "@typescript-eslint/eslint-plugin": "8.13.0",
-    "@typescript-eslint/parser": "8.13.0",
-    "@vitest/coverage-v8": "2.1.4",
+    "@typescript-eslint/eslint-plugin": "8.15.0",
+    "@typescript-eslint/parser": "8.15.0",
+    "@vitest/coverage-v8": "2.1.5",
     "cpy-cli": "5.0.0",
     "del-cli": "6.0.0",
-    "eslint": "9.14.0",
+    "eslint": "9.15.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-svelte": "2.46.0",
     "globals": "15.12.0",
-    "husky": "9.1.6",
+    "husky": "9.1.7",
     "jsdom": "25.0.1",
     "lossless-json": "4.0.2",
     "npm-run-all": "4.1.5",
     "prettier": "3.3.3",
-    "prettier-plugin-svelte": "3.2.7",
-    "rollup": "4.24.4",
+    "prettier-plugin-svelte": "3.2.8",
+    "rollup": "4.27.3",
     "rollup-plugin-dts": "6.1.1",
     "rollup-plugin-postcss": "4.0.2",
     "rollup-plugin-svelte": "7.2.2",
     "standard-version": "9.5.0",
-    "svelte": "5.1.9",
-    "svelte-check": "4.0.5",
+    "svelte": "5.2.4",
+    "svelte-check": "4.0.9",
     "svelte-eslint-parser": "0.43.0",
     "svelte-preprocess": "6.0.3",
     "typescript": "5.6.3",
-    "vite": "5.4.10",
-    "vitest": "2.1.4"
+    "vite": "5.4.11",
+    "vitest": "2.1.5"
   }
 }
