--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "immutable-json-patch": "^6.0.1",
     "jmespath": "^0.16.0",
     "json-source-map": "^0.6.1",
-    "jsonpath-plus": "^9.0.0 || ^10.2.0",
+    "jsonpath-plus": "^10.3.0",
     "jsonrepair": "^3.0.0",
     "lodash-es": "^4.17.21",
     "memoize-one": "^6.0.0",
