--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "vanilla-picker": "^2.12.3"
   },
   "peerDependencies": {
-    "svelte": "^3.54.0 || ^4.0.0 || ^5.0.0"
+    "svelte": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.26.10",
