chore(cs): fix formatting

--- a/.github/workflows/automated-release.yml
+++ b/.github/workflows/automated-release.yml
@@ -13,7 +13,7 @@ jobs:
           node-version: 22
           cache: npm
           token: ${{ secrets.NPM_TOKEN }}
-          cache-dependency-path: "package-lock.json"
+          cache-dependency-path: 'package-lock.json'
       - run: npm run release:lint
       - run: npm run release:test-ci
       - run: npm run release:check
