--- a/.github/workflows/automated-release.yml
+++ b/.github/workflows/automated-release.yml
@@ -16,7 +16,7 @@ jobs:
           cache-dependency-path: 'package-lock.json'
       - run: npm ci
       - run: npm run release:lint
-      - run: npm run release:test-ci
+      - run: npm run release:test
       - run: npm run release:check
       - run: npm run release:build
       - run: >
