--- a/.github/workflows/automated-release.yml
+++ b/.github/workflows/automated-release.yml
@@ -26,6 +26,8 @@ jobs:
           -p conventional-changelog-conventionalcommits
           -p semantic-release
           -- semantic-release
+        env:
+           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 permissions:
   # packages: write # This is for pushing it to githubs package repository
   contents: write
