--- a/.github/workflows/automated-release.yml
+++ b/.github/workflows/automated-release.yml
@@ -8,6 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
       - uses: actions/setup-node@v4
         with:
           node-version: 22
@@ -26,8 +28,6 @@ jobs:
           -p conventional-changelog-conventionalcommits
           -p semantic-release
           -- semantic-release
-        env:
-           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 permissions:
   # packages: write # This is for pushing it to githubs package repository
   contents: write
