--- a/package.json
+++ b/package.json
@@ -68,12 +68,9 @@
     "release:lint": "npm run lint",
     "release:check": "npm run check",
     "release:test": "npm run test-ci",
-    "release:version": "standard-version",
     "release:build": "npm run build",
-    "release:push": "git push && git push --tag",
-    "release:publish:svelte-jsoneditor": "npm publish package/",
-    "release:publish:vanilla-jsoneditor": "npm publish package-vanilla/",
-    "release-dry-run": "standard-version --dry-run"
+    "release:publish": "semantic-release",
+    "release-dry-run": "semantic-release --dry-run --plugins \"@semantic-release/commit-analyzer\""
   },
   "dependencies": {
     "@codemirror/autocomplete": "^6.18.1",
@@ -122,6 +119,8 @@
     "@rollup/plugin-node-resolve": "16.0.1",
     "@rollup/plugin-terser": "0.4.4",
     "@rollup/plugin-typescript": "12.1.2",
+    "@semantic-release/commit-analyzer": "13.0.1",
+    "@semantic-release/release-notes-generator": "14.0.3",
     "@sveltejs/adapter-static": "3.0.8",
     "@sveltejs/kit": "2.20.2",
     "@sveltejs/package": "2.3.10",
@@ -134,6 +133,7 @@
     "@typescript-eslint/eslint-plugin": "8.28.0",
     "@typescript-eslint/parser": "8.28.0",
     "@vitest/coverage-v8": "3.0.9",
+    "conventional-changelog-conventionalcommits": "8.0.0",
     "cpy-cli": "5.0.0",
     "del-cli": "6.0.0",
     "eslint": "9.23.0",
@@ -151,7 +151,7 @@
     "rollup-plugin-dts": "6.2.1",
     "rollup-plugin-postcss": "4.0.2",
     "rollup-plugin-svelte": "7.2.2",
-    "standard-version": "9.5.0",
+    "semantic-release": "24.2.3",
     "svelte": "5.25.3",
     "svelte-check": "4.1.5",
     "svelte-eslint-parser": "1.1.0",
