--- a/package.json
+++ b/package.json
@@ -106,13 +106,13 @@
     "svelte": "^5.0.0"
   },
   "devDependencies": {
-    "@babel/core": "7.28.0",
-    "@babel/preset-env": "7.28.0",
+    "@babel/core": "7.28.4",
+    "@babel/preset-env": "7.28.3",
     "@commitlint/cli": "19.8.1",
     "@commitlint/config-conventional": "19.8.1",
-    "@eslint/compat": "1.3.1",
+    "@eslint/compat": "1.4.0",
     "@eslint/eslintrc": "3.3.1",
-    "@eslint/js": "9.30.1",
+    "@eslint/js": "9.36.0",
     "@rollup/plugin-babel": "6.0.4",
     "@rollup/plugin-commonjs": "28.0.6",
     "@rollup/plugin-json": "6.1.0",
@@ -120,45 +120,46 @@
     "@rollup/plugin-terser": "0.4.4",
     "@rollup/plugin-typescript": "12.1.4",
     "@semantic-release/commit-analyzer": "13.0.1",
-    "@semantic-release/release-notes-generator": "14.0.3",
-    "@sveltejs/adapter-static": "3.0.8",
-    "@sveltejs/kit": "2.22.5",
-    "@sveltejs/package": "2.3.12",
-    "@sveltejs/vite-plugin-svelte": "5.1.0",
-    "@testing-library/jest-dom": "6.6.3",
+    "@semantic-release/release-notes-generator": "14.1.0",
+    "@sveltejs/adapter-static": "3.0.9",
+    "@sveltejs/kit": "2.43.2",
+    "@sveltejs/package": "2.5.4",
+    "@sveltejs/vite-plugin-svelte": "6.2.0",
+    "@testing-library/jest-dom": "6.8.0",
     "@testing-library/svelte": "5.2.8",
     "@types/jmespath": "0.15.2",
     "@types/jsonpath": "0.2.4",
     "@types/lodash-es": "4.17.12",
     "@types/natural-compare-lite": "1.4.2",
-    "@typescript-eslint/eslint-plugin": "8.36.0",
-    "@typescript-eslint/parser": "8.36.0",
+    "@typescript-eslint/eslint-plugin": "8.44.1",
+    "@typescript-eslint/parser": "8.44.1",
     "@vitest/coverage-v8": "3.2.4",
     "conventional-changelog-conventionalcommits": "9.1.0",
-    "cpy-cli": "5.0.0",
-    "del-cli": "6.0.0",
-    "eslint": "9.30.1",
-    "eslint-config-prettier": "10.1.5",
+    "cpy-cli": "6.0.0",
+    "del-cli": "7.0.0",
+    "eslint": "9.36.0",
+    "eslint-config-prettier": "10.1.8",
     "eslint-plugin-import": "2.32.0",
     "eslint-plugin-svelte": "2.46.1",
-    "globals": "16.3.0",
+    "globals": "16.4.0",
     "husky": "9.1.7",
-    "jsdom": "26.1.0",
-    "lossless-json": "4.1.1",
+    "jsdom": "27.0.0",
+    "lossless-json": "4.2.0",
     "npm-run-all": "4.1.5",
     "prettier": "3.6.2",
     "prettier-plugin-svelte": "3.4.0",
-    "rollup": "4.44.2",
-    "rollup-plugin-dts": "6.2.1",
+    "rollup": "4.52.2",
+    "rollup-plugin-dts": "6.2.3",
     "rollup-plugin-postcss": "4.0.2",
-    "rollup-plugin-svelte": "7.2.2",
-    "semantic-release": "24.2.6",
-    "svelte": "5.35.6",
-    "svelte-check": "4.2.2",
-    "svelte-eslint-parser": "1.2.0",
+    "rollup-plugin-svelte": "7.2.3",
+    "semantic-release": "24.2.9",
+    "svelte": "5.39.5",
+    "svelte-check": "4.3.2",
+    "svelte-eslint-parser": "1.3.3",
     "svelte-preprocess": "6.0.3",
-    "typescript": "5.8.3",
-    "vite": "6.3.5",
+    "tslib": "2.8.1",
+    "typescript": "5.9.2",
+    "vite": "7.1.7",
     "vitest": "3.2.4"
   }
 }
