--- a/package.json
+++ b/package.json
@@ -81,8 +81,8 @@
     "@codemirror/search": "^6.5.6",
     "@codemirror/state": "^6.4.1",
     "@codemirror/view": "^6.34.1",
-    "@fortawesome/free-regular-svg-icons": "^6.6.0",
-    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0 || ^7.0.1",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0 || ^7.0.1",
     "@jsonquerylang/jsonquery": "^3.1.1 || ^4.0.0 || ^5.0.0",
     "@lezer/highlight": "^1.2.1",
     "@replit/codemirror-indentation-markers": "^6.5.3",
